# azure-test-functions

./: README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  setup.py.old
azure_cv_py/: constants.py  ocr.py  utils.py
azure_test_functions/: __init__.py  utils.py
azure_test_functions/bing_search/: __init__.py  __main__.py
azure_test_functions/bing_search/src/: __init__.py  main.py
azure_test_functions/embedding/: __main__.py
azure_test_functions/embedding/src/: main.py
azure_test_functions/gpt/: __init__.py  __main__.py
azure_test_functions/gpt/src/: __init__.py  main.py
azure_test_functions/ocr/: __init__.py  __main__.py
azure_test_functions/ocr/src/: __init__.py  main.py  merge_texts.py
azure_test_functions/speech_to_text/: __init__.py  __main__.py
azure_test_functions/speech_to_text/src/: __init__.py  main.py
azure_test_functions/translation/: __init__.py  __main__.py
azure_test_functions/translation/src/: __init__.py  main.py
